--- a/flexbox-challenge-01/index.html
+++ b/flexbox-challenge-01/index.html
@@ -33,7 +33,7 @@
                 </div>
             </div>
         </section>
-        <section class="sec_2">
+        <section class="sec_2 bg__dark">
             <div class="split">
                 <div>
                     <h2>Lorem ipsum dolor</h2>
@@ -47,7 +47,7 @@
                 </div>
             </div>
         </section>
-        <section class="sec_3">
+        <section class="sec_3 bg__accent">
             <div class="split">
                 <div class="sec_3__bg">
                     <!-- Image here -->
