--- a/practice/index.html
+++ b/practice/index.html
@@ -25,18 +25,21 @@
             </div>
         </nav>
 
-        <header>
+        <header class="header">
+            <p class="text-center" style="font-size: 28px;">Header</p>
         </header>
 
-        <main>
-            <section class=""></section>
+        <main class="main">
+            <section class="container-fluid">
+
+            </section>
             <section class=""></section>
             <section class=""></section>
         </main>
 
-        <footer>
-            <div class="text-center">
-                Copyright (C) 2021 <a href="https://github.com/AlexCr4ckPentest">AlexCr4ckPentest</a>
+        <footer class="footer fixed-bottom">
+            <div class="copyright text-dark">
+                Copyright (C) 2021 <a class="" href="https://github.com/AlexCr4ckPentest">AlexCr4ckPentest</a>
             </div>
         </footer>
 
