--- a/practice/index.html
+++ b/practice/index.html
@@ -9,13 +9,13 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: gray;">
+        <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color: gray;">
             <div class="container">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand" href="#">Something</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-dropdown" aria-controls="navbar-dropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <div class="collapse navbar-collapse" id="navbar-dropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Navbar entry #1</a></li>
@@ -25,19 +25,20 @@
             </div>
         </nav>
 
-        <header class="header">
-            <p class="text-center" style="font-size: 28px;">Header</p>
+        <header>
+            <p class="text-center">Hello world</p>
         </header>
 
-        <main class="main">
-            <section class="container-fluid">
-
+        <main>
+            <section class="grid_main">
+                <div class="grid_main__left"></div>
+                <div class="grid_main__right"></div>
             </section>
-            <section class=""></section>
-            <section class=""></section>
+            <section></section>
+            <section></section>
         </main>
 
-        <footer class="footer fixed-bottom">
+        <footer class="bottom-100">
             <div class="copyright text-dark">
                 Copyright (C) 2021 <a class="" href="https://github.com/AlexCr4ckPentest">AlexCr4ckPentest</a>
             </div>
