--- a/practice/index.html
+++ b/practice/index.html
@@ -9,9 +9,8 @@
     </head>
 
     <body>
-        <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color: gray;">
+        <nav class="navbar fixed-top navbar-expand-lg bg-transparent navbar-dark">
             <div class="container">
-                <a class="navbar-brand" href="#">Something</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-dropdown" aria-controls="navbar-dropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -20,28 +19,37 @@
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Navbar entry #1</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Navbar entry #2</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Navbar entry #3</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
 
         <header>
-            <p class="text-center">Hello world</p>
+            <p class="text-center text-light">123</p>
         </header>
 
         <main>
-            <section class="grid_main">
-                <div class="grid_main__left"></div>
-                <div class="grid_main__right"></div>
-            </section>
-            <section></section>
-            <section></section>
+            <div class="grid-wrapper">
+                <section class="grid" id="main__section-1">
+                    <div class="grid__l-elem text-center"></div>
+                    <div class="grid__r-elem"></div>
+                </section>
+                <section class="grid" id="main__section-2">
+                    <div class="grid__l-elem text-center"></div>
+                    <div class="grid__r-elem"></div>
+                </section>
+                <section class="grid" id="main__section-3">
+                    <div class="grid__l-elem text-center"></div>
+                    <div class="grid__r-elem"></div>
+                </section>
+            </div>
         </main>
 
         <footer class="bottom-100">
-            <div class="copyright text-dark">
-                Copyright (C) 2021 <a class="" href="https://github.com/AlexCr4ckPentest">AlexCr4ckPentest</a>
-            </div>
+            <p class="copyright">Copyright (C) 2021
+                <a class="github_profile" href="https://github.com/AlexCr4ckPentest">AlexCr4ckPentest</a>
+            </p>
         </footer>
 
         <script src="js/main.js"></script>
