--- a/practice/index.html
+++ b/practice/index.html
@@ -32,16 +32,34 @@
         <main>
             <div class="grid-wrapper">
                 <section class="grid" id="main__section-1">
-                    <div class="grid__l-elem text-center"></div>
-                    <div class="grid__r-elem"></div>
+                    <div class="grid__l-elem">
+                        <div class="product_text">Product1</div>
+                        <div class="product_image"></div>
+                    </div>
+                    <div class="grid__r-elem">
+                        <div class="product_text">Product2</div>
+                        <div class="product_image"></div>
+                    </div>
                 </section>
                 <section class="grid" id="main__section-2">
-                    <div class="grid__l-elem text-center"></div>
-                    <div class="grid__r-elem"></div>
+                    <div class="grid__l-elem">
+                        <div class="product_text">Product3</div>
+                        <div class="product_image"></div>
+                    </div>
+                    <div class="grid__r-elem">
+                        <div class="product_text">Product4</div>
+                        <div class="product_image"></div>
+                    </div>
                 </section>
                 <section class="grid" id="main__section-3">
-                    <div class="grid__l-elem text-center"></div>
-                    <div class="grid__r-elem"></div>
+                    <div class="grid__l-elem">
+                        <div class="product_text">Product5</div>
+                        <div class="product_image"></div>
+                    </div>
+                    <div class="grid__r-elem">
+                        <div class="product_text">Product6</div>
+                        <div class="product_image"></div>
+                    </div>
                 </section>
             </div>
         </main>
