add new section; product cards; update grid

--- a/practice/index.html
+++ b/practice/index.html
@@ -29,36 +29,74 @@
             <p class="text-center text-light">123</p>
         </header>
 
+        <section style="height: 384px; text-align: center; font-size: 64px; padding-top: 138px;">RESERVED</section>
+
         <main>
-            <div class="grid-wrapper">
+            <div class="grid-wrapper container">
                 <section class="grid" id="main__section-1">
                     <div class="grid__l-elem">
-                        <div class="product_text">Product1</div>
-                        <div class="product_image"></div>
+                        <div class="card text-center" style="width: 18rem;">
+                            <img class="card-img-top" src="img/header_image.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
                     </div>
                     <div class="grid__r-elem">
-                        <div class="product_text">Product2</div>
-                        <div class="product_image"></div>
+                        <div class="card text-center" style="width: 18rem;">
+                            <img class="card-img-top" src="img/header_image.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
                     </div>
                 </section>
                 <section class="grid" id="main__section-2">
                     <div class="grid__l-elem">
-                        <div class="product_text">Product3</div>
-                        <div class="product_image"></div>
+                        <div class="card text-center" style="width: 18rem;">
+                            <img class="card-img-top" src="img/header_image.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
                     </div>
                     <div class="grid__r-elem">
-                        <div class="product_text">Product4</div>
-                        <div class="product_image"></div>
+                        <div class="card text-center" style="width: 18rem;">
+                            <img class="card-img-top" src="img/header_image.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
                     </div>
                 </section>
                 <section class="grid" id="main__section-3">
                     <div class="grid__l-elem">
-                        <div class="product_text">Product5</div>
-                        <div class="product_image"></div>
+                        <div class="card text-center" style="width: 18rem;">
+                            <img class="card-img-top" src="img/header_image.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
                     </div>
                     <div class="grid__r-elem">
-                        <div class="product_text">Product6</div>
-                        <div class="product_image"></div>
+                        <div class="card text-center" style="width: 18rem;">
+                            <img class="card-img-top" src="img/header_image.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
                     </div>
                 </section>
             </div>
