--- a/practice/index.html
+++ b/practice/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <nav class="navbar fixed-top navbar-expand-lg bg-transparent navbar-dark">
-            <div class="container">
+            <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-dropdown" aria-controls="navbar-dropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
