--- a/practice/index.html
+++ b/practice/index.html
@@ -9,8 +9,8 @@
     </head>
 
     <body>
-        <nav class="navbar fixed-top navbar-expand-lg bg-transparent navbar-dark">
-            <div class="container-fluid">
+        <nav class="navbar sticky-top navbar-expand-lg bg-dark navbar-dark">
+            <div class="container">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-dropdown" aria-controls="navbar-dropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
