fix card images

--- a/practice/index.html
+++ b/practice/index.html
@@ -36,7 +36,7 @@
                 <section class="grid" id="main__section-1">
                     <div class="grid__l-elem">
                         <div class="card text-center" style="width: 18rem;">
-                            <img class="card-img-top" src="https://distrowatch.com/images/ktyxqzobhgijab/manjaro-small.png" alt="Manjaro Linux">
+                            <img class="card-img-top" src="img/manjaro-small.png" alt="Manjaro Linux">
                             <div class="card-body">
                               <h5 class="card-title">Manjaro Linux</h5>
                               <p class="card-text">Manjaro Linux is a fast, user-friendly, desktop-oriented operating system based on Arch Linux.</p>
@@ -48,7 +48,7 @@
                     </div>
                     <div class="grid__r-elem">
                         <div class="card text-center" style="width: 18rem;">
-                            <img class="card-img-top" src="https://distrowatch.com/images/ktyxqzobhgijab/endeavour-small.png" alt="EndeavourOS">
+                            <img class="card-img-top" src="img/endeavour-small.png" alt="EndeavourOS">
                             <div class="card-body">
                               <h5 class="card-title">EndeavourOS</h5>
                               <p class="card-text">EndeavourOS is a rolling release Linux distribution based on Arch Linux.</p>
@@ -62,7 +62,7 @@
                 <section class="grid" id="main__section-2">
                     <div class="grid__l-elem">
                         <div class="card text-center" style="width: 18rem;">
-                            <img class="card-img-top" src="https://distrowatch.com/images/ktyxqzobhgijab/artix-small.png" alt="Card image cap">
+                            <img class="card-img-top" src="img/artix-small.png" alt="Artix Linux">
                             <div class="card-body">
                               <h5 class="card-title">Artix Linux</h5>
                               <p class="card-text">Artix Linux is a fork (or continuation as an autonomous project) of the Arch-OpenRC and Manjaro-OpenRC projects.</p>
@@ -74,7 +74,7 @@
                     </div>
                     <div class="grid__r-elem">
                         <div class="card text-center" style="width: 18rem;">
-                            <img class="card-img-top" src="https://distrowatch.com/images/ktyxqzobhgijab/arch-small.png" alt="Card image cap">
+                            <img class="card-img-top" src="img/arch-small.png" alt="Arch Linux">
                             <div class="card-body">
                               <h5 class="card-title">Arch Linux</h5>
                               <p class="card-text">Arch Linux is an independently developed, x86_64-optimised Linux distribution targeted at competent Linux users. It uses 'pacman', its home-grown package manager, to provide updates to the latest software applications with full dependency tracking.</p>
@@ -88,7 +88,7 @@
                 <section class="grid" id="main__section-3">
                     <div class="grid__l-elem">
                         <div class="card text-center" style="width: 18rem;">
-                            <img class="card-img-top" src="https://distrowatch.com/images/ktyxqzobhgijab/mint-small.png" alt="Linux Mint">
+                            <img class="card-img-top" src="img/mint-small.png" alt="Linux Mint">
                             <div class="card-body">
                               <h5 class="card-title">Linux Mint</h5>
                               <p class="card-text">Linux Mint is an Ubuntu-based distribution whose goal is to provide a classic desktop experience with many convenient.</p>
@@ -100,7 +100,7 @@
                     </div>
                     <div class="grid__r-elem">
                         <div class="card text-center" style="width: 18rem;">
-                            <img class="card-img-top" src="https://distrowatch.com/images/ktyxqzobhgijab/kali-small.png" alt="Card image cap">
+                            <img class="card-img-top" src="img/kali-small.png" alt="Kali Linux">
                             <div class="card-body">
                               <h5 class="card-title">Kali Linux</h5>
                               <p class="card-text">Kali Linux (formerly known as BackTrack) is a Debian-based distribution with a collection of security and forensics tools.</p>
