update bg color for cards

--- a/practice/index.html
+++ b/practice/index.html
@@ -17,25 +17,26 @@
                 <div class="collapse navbar-collapse" id="navbar-dropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#main__section-1">Navbar entry #1</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#main__section-2">Navbar entry #2</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#main__section-3">Navbar entry #3</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#main__section-1">1</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#main__section-2">2</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#main__section-3">3</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
 
         <header>
-            <p class="text-center text-light header-text">123</p>
+            <p class="text-center text-light header-text">"Software is like sex : it's better when it's free..."<br> (C) Linus Torvalds</p>
         </header>
 
-        <section class="view"></section>
+        <section class="view">
+        </section>
 
         <main id="_main">
             <div class="grid-wrapper container-fluid">
                 <section class="grid" id="main__section-1">
                     <div class="grid__l-elem">
-                        <div class="card text-center" style="width: 18rem;">
+                        <div class="card text-center bg-dark text-light" style="width: 18rem;">
                             <img class="card-img-top" src="img/manjaro-small.png" alt="Manjaro Linux">
                             <div class="card-body">
                               <h5 class="card-title">Manjaro Linux</h5>
@@ -47,7 +48,7 @@
                         </div>
                     </div>
                     <div class="grid__r-elem">
-                        <div class="card text-center" style="width: 18rem;">
+                        <div class="card text-center bg-dark text-light" style="width: 18rem;">
                             <img class="card-img-top" src="img/endeavour-small.png" alt="EndeavourOS">
                             <div class="card-body">
                               <h5 class="card-title">EndeavourOS</h5>
@@ -61,7 +62,7 @@
                 </section>
                 <section class="grid" id="main__section-2">
                     <div class="grid__l-elem">
-                        <div class="card text-center" style="width: 18rem;">
+                        <div class="card text-center bg-dark text-light" style="width: 18rem;">
                             <img class="card-img-top" src="img/artix-small.png" alt="Artix Linux">
                             <div class="card-body">
                               <h5 class="card-title">Artix Linux</h5>
@@ -73,7 +74,7 @@
                         </div>
                     </div>
                     <div class="grid__r-elem">
-                        <div class="card text-center" style="width: 18rem;">
+                        <div class="card text-center bg-dark text-light" style="width: 18rem;">
                             <img class="card-img-top" src="img/arch-small.png" alt="Arch Linux">
                             <div class="card-body">
                               <h5 class="card-title">Arch Linux</h5>
@@ -87,7 +88,7 @@
                 </section>
                 <section class="grid" id="main__section-3">
                     <div class="grid__l-elem">
-                        <div class="card text-center" style="width: 18rem;">
+                        <div class="card text-center bg-dark text-light" style="width: 18rem;">
                             <img class="card-img-top" src="img/mint-small.png" alt="Linux Mint">
                             <div class="card-body">
                               <h5 class="card-title">Linux Mint</h5>
@@ -99,7 +100,7 @@
                         </div>
                     </div>
                     <div class="grid__r-elem">
-                        <div class="card text-center" style="width: 18rem;">
+                        <div class="card text-center bg-dark text-light" style="width: 18rem;">
                             <img class="card-img-top" src="img/kali-small.png" alt="Kali Linux">
                             <div class="card-body">
                               <h5 class="card-title">Kali Linux</h5>
