--- a/practice/index.html
+++ b/practice/index.html
@@ -17,9 +17,9 @@
                 <div class="collapse navbar-collapse" id="navbar-dropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#main__section-1">1</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#main__section-2">2</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#main__section-3">3</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#main__section-1">Arch based</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#main__section-2">Debian based</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#main__section-3">Independent</a></li>
                     </ul>
                 </div>
             </div>
