--- a/practice/index.html
+++ b/practice/index.html
@@ -17,89 +17,106 @@
                 <div class="collapse navbar-collapse" id="navbar-dropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#main__section-1">Arch based</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#main__section-2">Debian based</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#main__section-3">Independent</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#why-opensource">Why to opens ource?</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#list-distros">List of GNU/Linux distros</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
 
         <header>
-            <p class="text-center text-light header-text">"Software is like sex : it's better when it's free..."<br> (C) Linus Torvalds</p>
+            <p class="text-center text-light header-text">"Software is like sex : it's better when it's free..."<br>(C) Linus Torvalds</p>
         </header>
 
-        <section class="view">
+        <section class="heading text-light" id="why-opensource">
+            <div class="heading-grid-top container-fluid">
+                <div class="heading-grid-item"><h3>Freedom</h3></div>
+                <div class="heading-grid-item"><h3>Security</h3></div>
+                <div class="heading-grid-item"><h3>Quality</h3></div>
+            </div>
+            <div class="heading-header"><h1>Why open source is good?</h1></div>
+            <div class="heading-grid-bottom container-fluid">
+                <div class="heading-grid-item"><h3>Crossplatform</h3></div>
+                <div class="heading-grid-item"><h3>Interoperability</h3></div>
+                <div class="heading-grid-item"><h3>Auditability</h3></div>
+            </div>
         </section>
 
-        <main id="_main">
-            <div class="grid-wrapper container-fluid">
-                <section class="grid" id="main__section-1">
-                    <div class="grid__l-elem">
+        <main id="list-distros">
+            <h1 class="text-center text-light">List of GNU/Linux distributions recomend by me</h1>
+            <div class="">
+                <!-- Arch based -->
+                <section class="main-grid" id="arch-based-distros">
+                    <div class="main-grid-item">
                         <div class="card text-center bg-dark text-light" style="width: 18rem;">
                             <img class="card-img-top" src="img/manjaro-small.png" alt="Manjaro Linux">
                             <div class="card-body">
                               <h5 class="card-title">Manjaro Linux</h5>
-                              <p class="card-text">Manjaro Linux is a fast, user-friendly, desktop-oriented operating system based on Arch Linux.</p>
+                              <p class="card-text">Fast, user-friendly, desktop-oriented operating system based on Arch Linux. Key features - automatic hardware detection, stable rolling-release model, ability to install multiple kernels, special Bash scripts for managing graphics drivers and extensive desktop configurability.</p>
                               <p>Desktop: Awesome, bspwm, Budgie, Cinnamon, GNOME, i3, KDE Plasma, LXQt, MATE, Openbox, Xfce</p>
                               <p>Category: Desktop, Live Medium, Raspberry Pi</p>
-                              <a href="https://distrowatch.com/table.php?distribution=manjaro" class="btn btn-primary">See on distrowatch</a>
+                              <a href="https://distrowatch.com/table.php?distribution=manjaro" class="btn btn-primary">See on distrowatch</a><br><br>
+                              <a href="https://manjaro.org/" class="btn btn-primary">Official site</a>
                             </div>
                         </div>
                     </div>
-                    <div class="grid__r-elem">
-                        <div class="card text-center bg-dark text-light" style="width: 18rem;">
-                            <img class="card-img-top" src="img/endeavour-small.png" alt="EndeavourOS">
-                            <div class="card-body">
-                              <h5 class="card-title">EndeavourOS</h5>
-                              <p class="card-text">EndeavourOS is a rolling release Linux distribution based on Arch Linux.</p>
-                              <p>Desktop: Budgie, Cinnamon, GNOME, i3, KDE Plasma, LXQt, MATE, Xfce</p>
-                              <p>Category: Desktop, Live Medium</p>
-                              <a href="https://distrowatch.com/table.php?distribution=endeavour" class="btn btn-primary">See on distrowatch</a>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-                <section class="grid" id="main__section-2">
-                    <div class="grid__l-elem">
+                    <div class="main-grid-item">
                         <div class="card text-center bg-dark text-light" style="width: 18rem;">
                             <img class="card-img-top" src="img/artix-small.png" alt="Artix Linux">
                             <div class="card-body">
                               <h5 class="card-title">Artix Linux</h5>
-                              <p class="card-text">Artix Linux is a fork (or continuation as an autonomous project) of the Arch-OpenRC and Manjaro-OpenRC projects.</p>
+                              <p class="card-text">Fork (or continuation as an autonomous project) of the Arch-OpenRC and Manjaro-OpenRC projects. Lightweight, rolling-release operating system featuring the OpenRC init software.</p>
                               <p>Desktop: Cinnamon, LXDE, LXQt, MATE, KDE Plasma, Xfce</p>
                               <p>Category: Desktop, Live Medium</p>
-                              <a href="https://distrowatch.com/table.php?distribution=artix" class="btn btn-primary">See on distrowatch</a>
+                              <a href="https://distrowatch.com/table.php?distribution=artix" class="btn btn-primary">See on distrowatch</a><br><br>
+                              <a href="https://artixlinux.org/" class="btn btn-primary">Official site</a>
                             </div>
                         </div>
                     </div>
-                    <div class="grid__r-elem">
+                    <div class="main-grid-item">
                         <div class="card text-center bg-dark text-light" style="width: 18rem;">
-                            <img class="card-img-top" src="img/arch-small.png" alt="Arch Linux">
+                            <img class="card-img-top" src="img/garuda-small.png" alt="Garuda Linux">
                             <div class="card-body">
-                              <h5 class="card-title">Arch Linux</h5>
-                              <p class="card-text">Arch Linux is an independently developed, x86_64-optimised Linux distribution targeted at competent Linux users. It uses 'pacman', its home-grown package manager, to provide updates to the latest software applications with full dependency tracking.</p>
-                              <p>Desktop: Cinnamon, Enlightenment, GNOME, KDE, LXDE, MATE, Xfce</p>
-                              <p>Category: Desktop, Server</p>
-                              <a href="https://distrowatch.com/table.php?distribution=arch" class="btn btn-primary">See on distrowatch</a>
+                              <h5 class="card-title">Garuda Linux</h5>
+                              <p class="card-text">Rolling distribution based on the Arch Linux. Performance-oriented, with many performance enhancing tweaks: zram, performance CPU governor, custom memory management software.</p>
+                              <p>Desktop: bspwm, Cinnamon, GNOME, i3, KDE Plasma, LXQt, MATE, Recbox, UKUI, Wayfire, Xfce</p>
+                              <p>Category: Desktop, Live Media</p>
+                              <a href="https://distrowatch.com/table.php?distribution=garuda" class="btn btn-primary">See on distrowatch</a><br><br>
+                              <a href="https://garudalinux.org/" class="btn btn-primary">Official site</a>
                             </div>
                         </div>
                     </div>
                 </section>
-                <section class="grid" id="main__section-3">
-                    <div class="grid__l-elem">
+
+                <!-- Debian based -->
+                <section class="main-grid" id="debian-based-distros">
+                    <div class="main-grid-item">
                         <div class="card text-center bg-dark text-light" style="width: 18rem;">
-                            <img class="card-img-top" src="img/mint-small.png" alt="Linux Mint">
+                            <img class="card-img-top" src="img/mx-small.png" alt="MX Linux">
                             <div class="card-body">
-                              <h5 class="card-title">Linux Mint</h5>
-                              <p class="card-text">Linux Mint is an Ubuntu-based distribution whose goal is to provide a classic desktop experience with many convenient.</p>
-                              <p>Desktop: Cinnamon, MATE, Xfce</p>
-                              <p>Category: Beginners, Desktop, Live Medium</p>
-                              <a href="https://distrowatch.com/table.php?distribution=mint" class="btn btn-primary">See on distrowatch</a>
+                              <h5 class="card-title">MX Linux</h5>
+                              <p class="card-text">Desktop-oriented Linux distribution based on Debian's "stable" branch, it is a mid-weight operating system with high stability, solid performance and medium-sized footprint.</p>
+                              <p>Desktop: KDE Plasma, Xfce</p>
+                              <p>Category: Desktop, From RAM, Live Medium, Raspberry Pi</p>
+                              <a href="https://distrowatch.com/table.php?distribution=mx" class="btn btn-primary">See on distrowatch</a><br><br>
+                              <a href="https://mxlinux.org/" class="btn btn-primary">Official site</a>
                             </div>
                         </div>
                     </div>
-                    <div class="grid__r-elem">
+                    <div class="main-grid-item">
+                        <div class="card text-center bg-dark text-light" style="width: 18rem;">
+                            <img class="card-img-top" src="img/antix-small.png" alt="antiX Linux">
+                            <div class="card-body">
+                              <h5 class="card-title">antiX Linux</h5>
+                              <p class="card-text">Fast, lightweight and easy-to-install Linux live CD distribution based on Debian's "Stable" branch for x86 compatible systems. Offers users the "antiX Magic" in an environment suitable for old computers.</p>
+                              <p>Desktop: Enlightenment, GNOME, KDE Plasma, LXDE, MATE, Xfce</p>
+                              <p>Category: From RAM, Live Medium, Old Computers</p>
+                              <a href="https://distrowatch.com/table.php?distribution=antix" class="btn btn-primary">See on distrowatch</a><br><br>
+                              <a href="https://antixlinux.com/" class="btn btn-primary">Official site</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="main-grid-item">
                         <div class="card text-center bg-dark text-light" style="width: 18rem;">
                             <img class="card-img-top" src="img/kali-small.png" alt="Kali Linux">
                             <div class="card-body">
@@ -107,7 +124,51 @@
                               <p class="card-text">Kali Linux (formerly known as BackTrack) is a Debian-based distribution with a collection of security and forensics tools.</p>
                               <p>Desktop: Enlightenment, GNOME, KDE Plasma, LXDE, MATE, Xfce</p>
                               <p>Category: Data Rescue, Forensics, Live Medium, Raspberry Pi, Security</p>
-                              <a href="https://distrowatch.com/table.php?distribution=kali" class="btn btn-primary">See on distrowatch</a>
+                              <a href="https://distrowatch.com/table.php?distribution=kali" class="btn btn-primary">See on distrowatch</a><br><br>
+                              <a href="https://www.kali.org/" class="btn btn-primary">Official site</a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- Independent distros -->
+                <section class="main-grid" id="independent-distros">
+                    <div class="main-grid-item">
+                        <div class="card text-center bg-dark text-light" style="width: 18rem;">
+                            <img class="card-img-top" src="img/arch-small.png" alt="Arch Linux">
+                            <div class="card-body">
+                              <h5 class="card-title">Arch Linux</h5>
+                              <p class="card-text">Independently developed, x86_64-optimised Linux distribution targeted at competent Linux users. It uses 'pacman', its home-grown package manager, to provide updates to the latest software applications with full dependency tracking.</p>
+                              <p>Desktop: Cinnamon, Enlightenment, GNOME, KDE, LXDE, MATE, Xfce</p>
+                              <p>Category: Desktop, Server</p>
+                              <a href="https://distrowatch.com/table.php?distribution=arch" class="btn btn-primary">See on distrowatch</a><br><br>
+                              <a href="https://archlinux.org/" class="btn btn-primary">Official site</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="main-grid-item">
+                        <div class="card text-center bg-dark text-light" style="width: 18rem;">
+                            <img class="card-img-top" src="img/debian-small.png" alt="Debian">
+                            <div class="card-body">
+                              <h5 class="card-title">Debian</h5>
+                              <p class="card-text">Association of individuals who have made common cause to create a free operating system. Debian comes with over 50,000 packages - all of it free.</p>
+                              <p>Desktop: AfterStep, Awesome, Blackbox, Cinnamon, Fluxbox, flwm, FVWM, GNOME, i3, IceWM, ion, JWM, KDE, LXDE, LXQt, MATE, Openbox, pekwm, Ratpoison, WMaker, XBMC, Xfce</p>
+                              <p>Category: Desktop, Server</p>
+                              <a href="https://distrowatch.com/table.php?distribution=debian" class="btn btn-primary">See on distrowatch</a><br><br>
+                              <a href="http://www.debian.org/" class="btn btn-primary">Official site</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="main-grid-item">
+                        <div class="card text-center bg-dark text-light" style="width: 18rem;">
+                            <img class="card-img-top" src="img/fedora-small.png" alt="Fedora">
+                            <div class="card-body">
+                              <h5 class="card-title">Fedora</h5>
+                              <p class="card-text">Linux distribution developed by the community-supported Fedora Project and owned by Red Hat. Fedora contains software distributed under a free and open-source license and aims to be on the leading edge of such technologies.</p>
+                              <p>Desktop: Awesome, Cinnamon, Enlightenment, i3, GNOME, KDE Plasma, LXDE, LXQt, MATE, Openbox, Pantheon, Ratpoison, Xfce</p>
+                              <p>Category: Desktop, Server, Live Medium</p>
+                              <a href="https://distrowatch.com/table.php?distribution=fedora" class="btn btn-primary">See on distrowatch</a><br><br>
+                              <a href="https://getfedora.org/" class="btn btn-primary">Official site</a>
                             </div>
                         </div>
                     </div>
