--- a/practice/index.html
+++ b/practice/index.html
@@ -17,7 +17,7 @@
                 <div class="collapse navbar-collapse" id="navbar-dropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#why-opensource">Why to opens ource?</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#why-opensource">Why open source is good?</a></li>
                         <li class="nav-item"><a class="nav-link" href="#list-distros">List of GNU/Linux distros</a></li>
                     </ul>
                 </div>
