--- a/practice/index.html
+++ b/practice/index.html
@@ -18,7 +18,17 @@
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#why-opensource">Why open source is good?</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#list-distros">List of GNU/Linux distros</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbar-dropdown-menu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                List of GNU/Linux distributions recomend by me
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbar-dropdown-menu">
+                              <li><a class="dropdown-item" href="#arch-based-distros">Arch based distros</a></li>
+                              <li><a class="dropdown-item" href="#debian-based-distros">Debian based distros</a></li>
+                              <li><a class="dropdown-item" href="#independently-distros">Independently distros</a></li>
+                              <li><a class="dropdown-item" href="#maybe-interesting">May be interesting</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -28,7 +38,6 @@
             <header>
                 <p class="text-center text-light header-text">"Software is like sex: it's better when it's free..."<br>(C) Linus Torvalds</p>
             </header>
-    
             <section class="heading text-light" id="why-opensource">
                 <div class="heading-grid-top container-fluid">
                     <div class="heading-grid-item"><h3>Freedom</h3></div>
@@ -54,7 +63,7 @@
                 <h2 class="text-center text-light">Arch based</h2>
                 <div class="main-grid container">
                     <div class="main-grid-item">
-                        <div class="card text-center bg-dark text-light" style="width: 18rem;">
+                        <div class="card text-center bg-transparent text-light" style="width: 18rem;">
                             <img class="card-img-top" src="img/manjaro-small.png" alt="Manjaro Linux">
                             <div class="card-body">
                                 <h5 class="card-title">Manjaro Linux</h5>
@@ -67,7 +76,7 @@
                         </div>
                     </div>
                     <div class="main-grid-item">
-                        <div class="card text-center bg-dark text-light" style="width: 18rem;">
+                        <div class="card text-center bg-transparent text-light" style="width: 18rem;">
                             <img class="card-img-top" src="img/artix-small.png" alt="Artix Linux">
                             <div class="card-body">
                               <h5 class="card-title">Artix Linux</h5>
@@ -80,7 +89,7 @@
                         </div>
                     </div>
                     <div class="main-grid-item">
-                        <div class="card text-center bg-dark text-light" style="width: 18rem;">
+                        <div class="card text-center bg-transparent text-light" style="width: 18rem;">
                             <img class="card-img-top" src="img/garuda-small.png" alt="Garuda Linux">
                             <div class="card-body">
                               <h5 class="card-title">Garuda Linux</h5>
@@ -100,7 +109,7 @@
                 <h2 class="text-center text-light">Debian based</h2>
                 <div class="main-grid container">
                     <div class="main-grid-item">
-                        <div class="card text-center bg-dark text-light" style="width: 18rem;">
+                        <div class="card text-center bg-transparent text-light" style="width: 18rem;">
                             <img class="card-img-top" src="img/mx-small.png" alt="MX Linux">
                             <div class="card-body">
                               <h5 class="card-title">MX Linux</h5>
@@ -113,7 +122,7 @@
                         </div>
                     </div>
                     <div class="main-grid-item">
-                        <div class="card text-center bg-dark text-light" style="width: 18rem;">
+                        <div class="card text-center bg-transparent text-light" style="width: 18rem;">
                             <img class="card-img-top" src="img/antix-small.png" alt="antiX Linux">
                             <div class="card-body">
                               <h5 class="card-title">antiX Linux</h5>
@@ -126,7 +135,7 @@
                         </div>
                     </div>
                     <div class="main-grid-item">
-                        <div class="card text-center bg-dark text-light" style="width: 18rem;">
+                        <div class="card text-center bg-transparent text-light" style="width: 18rem;">
                             <img class="card-img-top" src="img/parrot-small.png" alt="Parrot Security OS">
                             <div class="card-body">
                               <h5 class="card-title">Parrot (formerly Parrot Security OS)</h5>
@@ -142,11 +151,11 @@
             </section>
 
             <!-- Independent distros -->
-            <section id="independent-distros">
-                <h2 class="text-center text-light">Independent distros</h2>
+            <section id="independently-distros">
+                <h2 class="text-center text-light">Independently distros</h2>
                 <div class="main-grid container">
                     <div class="main-grid-item">
-                        <div class="card text-center bg-dark text-light" style="width: 18rem;">
+                        <div class="card text-center bg-transparent text-light" style="width: 18rem;">
                             <img class="card-img-top" src="img/arch-small.png" alt="Arch Linux">
                             <div class="card-body">
                                 <h5 class="card-title">Arch Linux</h5>
@@ -159,7 +168,7 @@
                         </div>
                     </div>
                     <div class="main-grid-item">
-                        <div class="card text-center bg-dark text-light" style="width: 18rem;">
+                        <div class="card text-center bg-transparent text-light" style="width: 18rem;">
                             <img class="card-img-top" src="img/debian-small.png" alt="Debian">
                             <div class="card-body">
                                 <h5 class="card-title">Debian</h5>
@@ -172,7 +181,7 @@
                         </div>
                     </div>
                     <div class="main-grid-item">
-                        <div class="card text-center bg-dark text-light" style="width: 18rem;">
+                        <div class="card text-center bg-transparent text-light" style="width: 18rem;">
                             <img class="card-img-top" src="img/fedora-small.png" alt="Fedora">
                             <div class="card-body">
                                 <h5 class="card-title">Fedora</h5>
@@ -192,7 +201,7 @@
                 <h2 class="text-center text-light">May be interesting</h2>
                 <div class="main-grid container">
                     <div class="main-grid-item">
-                        <div class="card text-center bg-dark text-light" style="width: 18rem;">
+                        <div class="card text-center bg-transparent text-light" style="width: 18rem;">
                             <img class="card-img-top" src="img/gentoo-small.png" alt="Gentoo">
                             <div class="card-body">
                                 <h5 class="card-title">Gentoo Linux</h5>
@@ -205,7 +214,7 @@
                         </div>
                     </div>
                     <div class="main-grid-item">
-                        <div class="card text-center bg-dark text-light" style="width: 18rem;">
+                        <div class="card text-center bg-transparent text-light" style="width: 18rem;">
                             <img class="card-img-top" src="img/nixos-small.png" alt="NixOS">
                             <div class="card-body">
                                 <h5 class="card-title">NixOS</h5>
@@ -218,7 +227,7 @@
                         </div>
                     </div>
                     <div class="main-grid-item">
-                        <div class="card text-center bg-dark text-light" style="width: 18rem;">
+                        <div class="card text-center bg-transparent text-light" style="width: 18rem;">
                             <img class="card-img-top" src="img/slackware-small.png" alt="Slackware Linux">
                             <div class="card-body">
                                 <h5 class="card-title">Slackware Linux</h5>
@@ -235,9 +244,7 @@
         </main>
 
         <footer>
-            <p class="copyright">Copyright (C) 2021
-                <a class="github_profile" href="https://github.com/AlexCr4ckPentest">AlexCr4ckPentest</a>
-            </p>
+            <div class="text-light text-center">Copyright (C) 2021 <a href="https://github.com/AlexCr4ckPentest">AlexCr4ckPentest</a></div>
         </footer>
 
         <script src="js/main.js"></script>
