fix grid; update title; fix quote

--- a/practice/index.html
+++ b/practice/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>ХЗ че это</title>
+        <title>Название не придумал</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -36,7 +36,7 @@
 
         <section class="header-background">
             <header>
-                <p class="text-center text-light header-text">"Software is like sex: it's better when it's free..."<br>(C) Linus Torvalds</p>
+                <p class="text-center text-light header-text">"Software is like sex: it's better when it's free"<br>(C) Linus Torvalds</p>
             </header>
             <section class="heading text-light" id="why-opensource">
                 <div class="heading-grid-top container-fluid">
@@ -150,7 +150,7 @@
                 </div>
             </section>
 
-            <!-- Independent distros -->
+            <!-- Independently distros -->
             <section id="independently-distros">
                 <h2 class="text-center text-light">Independently distros</h2>
                 <div class="main-grid container">
