fix ref to practice

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <a href="2/index.html" rel="noopener noreferrer">Second lection</a><br>
                 <a href="3/index.html" rel="noopener noreferrer">Third lection</a><br>
                 <a href="flexbox-challenge-01/index.html" rel="noopener noreferrer">Flexbox challenge</a><br>
-                <a href="practice/index.html" rel="noopener noreferrer">Practice</a>
+                <a href="practice/LGU_Pushkina_practice/index.html" rel="noopener noreferrer">Practice</a>
             </div>
         </section>
     </body>
